bastante pocho por ahora, todo a medias funciona bien falta zobrist